# FSR_first_semester

./: CMakeLists.txt  README.md  quicksort.c  test.c
first_semester/informatics/BST/: A.c  C.c
first_semester/informatics/HQ/: A.c  C.c
first_semester/informatics/autumn_graphs/: B.c
first_semester/informatics/multydimensional/: A.c
informatics/ADT/: A.c  B.c  C.c  D.c  E.c  F.c  anj.c
informatics/BST/: A.c  B.c  C.c
informatics/HQ/: D.c
informatics/arrays/: E.c  H.c
informatics/autumn_graphs/: A.c  C.c  D.c
informatics/multydimensional/: A.c  B.c  C.c  D.c  E.c  F.c  G.c
informatics/pointers/: A.c  B.c  C.c  D.c
informatics/recusrion/: A.c  B.c  C.c  D.c  E.c  F.c  G.c  H.c
semester1/informatics/2025-10-12 arrays/: H.c
semester1/informatics/2025-10-12 multydimensional/: E.c
semester1/informatics/2025-10-12_2_cycles/: G.c
semester1/informatics/2025-10-12_3_arrays/: D.c
semester1/informatics/2025-11-09_2_recusrion/: G.c  H.c
semester1/informatics/2025-12-14_1_ADT/: C.c  D.c  F.c
semester1/informatics/2025-12-14_3_HQ/: D.c
semester1/informatics/ADT/: B.c  E.c
semester1/informatics/multydimensional/: B.c
semester1/yandex/2025-09-04_comparison_operators/: A.c  C.c  D.c  F.c
semester1/yandex/2025-10-16_lists/: A.c  B.c
semester1/yandex/2025-12-15_Prim_Kruskal_PQueue/: A.c
semester2/informatics/2026-02-25 DSU_MST/: B.c  C.c  D.c  E.c
semester2/informatics/2026-03-12 shortest_paths/: A.c  B.c  C.c  D.c  E.c
semester2/informatics/2026-03-12 streams/: A.c  B.c
semester2/informatics/2026-03-12_1_shortest_paths/: C.c  E.c
semester2/informatics/2026-04-19 convex_hull/: A.c  B.c
semester2/informatics/2026-04-19 elementary geometry/: A.c  B.c  D.c  E.c
semester2/informatics/2026-04-19_1_elementary geometry/: B.c  C.c  D.c  E.c
semester2/informatics/2026-04-19_2_convex_hull/: A.c  B.c  C.c  D.c  E.c  F.c  G.c
semester2/informatics/2026-04-19_3_sweeping_line/: B.c  C.c
semester2/informatics/2026-05-20_1_strings/: A.c  B.c  C.c
semester2/informatics/2026-05-20_2_hashing/: A.c  B.c
semester2/informatics/DSU_MST/: B.c  C.c
semester2/yandex/2026-02-16/: A.c
semester2/yandex/2026-02-16_Dijkstra/: B.c
semester2/yandex/2026-02-19/: A.c
semester2/yandex/2026-02-26/: A.c
semester2/yandex/2026-03-02/: A.c
semester2/yandex/2026-03-02_Ford_Fulkerson/: A.c
semester2/yandex/2026-03-23/: A.c  A_Jarvis.c  A_Quickhall.c  B.c
semester2/yandex/2026-03-23_convex_hull/: A_Jarvis.c  A_Quickhall.c
semester2/yandex/2026-03-26/: A.c  A_Bentley_Ottmann.c  A_naive.c
semester2/yandex/2026-03-26_segment_intersection/: A_Bentley_Ottmann.c  A_naive.c
semester2/yandex/2026-03-30_abstract_composition/: A.c
semester2/yandex/2026-04-13_z_prefix_function/: A.c  A_pro.c  B.c
semester2/yandex/2026-04-16_Levenshtein_distance/: A.c  B.c
semester2/yandex/2026-04-23_trie/: B.c
semester2/yandex/2026-05-11_hash_table/: A.c  A_chain_method.c  A_open_addressation.c
yandex/: heap.c  stack.c  stack_list.c
yandex/01_12_2025_graph/: A.c  B.c  C.c  D.c
yandex/16.10.2025/: A.c  B.c  C.c
yandex/17_11_2025/: A.c  B.c  C.c
yandex/17_11_2025 (BST)/: A.c  B.c  C.c
yandex/19.10.2025/: A.c  C.c
yandex/23.10.2025/: B.c
yandex/25.09.2025/: C.c
yandex/30_10_2025/: deque.c
