cmake_minimum_required(VERSION 4.0)
project(c_fsr_codes)

set(CMAKE_CXX_STANDARD 14)

add_executable(c_fsr_codes
        .idea/.gitignore
        .idea/c_fsr_codes.iml
        .idea/misc.xml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        .vscode/tasks.json
        informatics/arrays/A.c
        informatics/arrays/B.c
        informatics/arrays/C.c
        informatics/arrays/D.c
        informatics/arrays/E.c
        informatics/arrays/E.exe
        informatics/arrays/G.c
        informatics/arrays/G.exe
        informatics/arrays/H.c
        informatics/arrays/H.exe
        informatics/cycles/B.c
        informatics/cycles/bank_interest.c
        informatics/cycles/C.c
        informatics/cycles/D.c
        informatics/cycles/E.c
        informatics/cycles/F.c
        informatics/cycles/G.c
        informatics/cycles/H.c
        informatics/cycles/I.c
        informatics/cycles/J.c
        informatics/multydimensional/A.c
        informatics/multydimensional/B.c
        informatics/multydimensional/B.exe
        informatics/multydimensional/C.c
        informatics/multydimensional/C.exe
        informatics/multydimensional/D.c
        informatics/multydimensional/D.exe
        informatics/multydimensional/E.c
        informatics/multydimensional/E.exe
        informatics/multydimensional/F.c
        informatics/multydimensional/F.exe
        informatics/multydimensional/G.c
        informatics/multydimensional/G.exe
        informatics/pointers/A.c
        informatics/pointers/A.exe
        informatics/pointers/B.c
        informatics/pointers/B.exe
        informatics/pointers/C.c
        informatics/pointers/D.c
        informatics/pointers/D.exe
        informatics/recusrion/A.c
        informatics/recusrion/A.exe
        informatics/recusrion/B.c
        informatics/recusrion/B.exe
        informatics/recusrion/C.c
        informatics/recusrion/C.exe
        informatics/recusrion/D.c
        informatics/recusrion/D.exe
        informatics/recusrion/E.c
        informatics/recusrion/F.c
        informatics/recusrion/F.exe
        informatics/recusrion/G.c
        informatics/recusrion/G.exe
        informatics/recusrion/H.c
        informatics/recusrion/H.exe
        yandex/04.09.2025/1.c
        yandex/04.09.2025/1copy.c
        yandex/04.09.2025/branching.c
        yandex/04.09.2025/cutlets.c
        yandex/04.09.2025/elevator.c
        yandex/04.09.2025/horse.c
        yandex/04.09.2025/red_cap.c
        yandex/04.09.2025/tennis.c
        yandex/04.09.2025/traffic_lights.c
        yandex/16.10.2025/A.c
        yandex/16.10.2025/A.exe
        yandex/16.10.2025/B.c
        yandex/16.10.2025/B.exe
        yandex/16.10.2025/C.c
        yandex/16.10.2025/C.exe
        yandex/18.09.2025/B.c
        yandex/18.09.2025/C.c
        yandex/18.09.2025/D.c
        yandex/18.09.2025/E.c
        yandex/18.09.2025/F.c
        yandex/19.10.2025/A.c
        yandex/19.10.2025/C.c
        yandex/19.10.2025/C.exe
        yandex/23.10.2025/B.c
        yandex/23.10.2025/B.exe
        yandex/25.09.2025/A.c
        yandex/25.09.2025/B.c
        yandex/25.09.2025/C.c
        yandex/25.09.2025/C.exe
        yandex/25.09.2025/D.c
        yandex/25.09.2025/sort.c
        yandex/stack.c
        yandex/stack.exe
        yandex/stack_list.c
        yandex/stack_list.exe
        .gitignore
        README.md)
